<resources>
    <string name="app_name">Soundboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_discover">Discover</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id consectetur leo. Curabitur eu sapien dictum, venenatis mi id, posuere tortor. Integer finibus viverra neque quis pretium. Aliquam sagittis orci lorem, at viverra sem mattis vitae. Suspendisse sit amet scelerisque velit, sit amet condimentum dolor. Duis lacinia lorem metus, vel scelerisque leo interdum non. Sed posuere semper nisi, at egestas elit elementum ac. Nam pulvinar erat nec lectus cursus, quis pellentesque odio viverra. Pellentesque non dui orci. Mauris accumsan ultricies orci. Mauris mollis posuere ipsum, ac eleifend neque volutpat at. Etiam egestas turpis rhoncus enim auctor cursus. Nam lobortis mauris sed massa fermentum, ut condimentum mauris ultrices. Quisque aliquet, lectus quis efficitur vestibulum, orci orci rutrum enim, eu fringilla libero ante vitae nulla.Vestibulum maximus semper quam, id lobortis purus dignissim mattis. Integer eu porta neque. Donec interdum scelerisque neque, quis iaculis urna sollicitudin rutrum. Cras eu mollis odio, quis tristique ipsum. Praesent at mauris in eros viverra facilisis. Praesent mollis massa mauris, id malesuada massa dictum vitae. Sed suscipit enim eu hendrerit scelerisque. Nulla vitae diam id mauris laoreet pretium. Quisque sagittis dolor id eros venenatis fermentum. Suspendisse id libero et lectus fringilla rhoncus. Aliquam erat volutpat. Aenean in pellentesque est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id consectetur leo. Curabitur eu sapien dictum, venenatis mi id, posuere tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id consectetur leo. Curabitur eu sapien dictum, venenatis mi id, posuere tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id consectetur leo. Curabitur eu sapien dictum, venenatis mi id, posuere tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id consectetur leo. Curabitur eu sapien dictum, venenatis mi id, posuere tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id consectetur leo. Curabitur eu sapien dictum, venenatis mi id, posuere tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id consectetur leo. Curabitur eu sapien dictum, venenatis mi id, posuere tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id consectetur leo. Curabitur eu sapien dictum, venenatis mi id, posuere tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id consectetur leo. Curabitur eu sapien dictum, venenatis mi id, posuere tortor.</string>

    <!--    <string name="filler_text">hello world again*3!</string>-->
    <string name="main_shared_preferences_key">main_shared_preferences</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_register">Register</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fabactivity">FABactivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="username">\@username</string>
    <string name="invalid_password_prompt">Invalid password: minimum 8 characters and 1 digit</string>
</resources>
